<resources>
    <string name="app_name">Alarm Application</string>
    <string name="new_alarm_page_name">New Alarm</string>
    <string name="new_alarm_date_page_name">Date</string>
    <string name="new_alarm_time_page_name">Time</string>
    <string name="new_alarm_tone_page_name">Alarm Tone</string>
    <string name="new_alarm_snooze_page_name">Snooze</string>
    <string name="new_alarm_avatar_page_name">Avatar</string>
    <string name="new_alarm_theme_page_name">Theme</string>
    <string name="button_send">+</string>

    <string name="alarm_name_hint">Enter alarm name...</string>
    <string name="new_alarm_page_date_button">Date</string>
    <string name="new_alarm_page_time_button">Time</string>
    <string name="new_alarm_page_tone_button">Alarm Tone</string>
    <string name="new_alarm_page_snooze_button">Snooze</string>
    <string name="new_alarm_page_avatar_button">Avatar</string>
    <string name="new_alarm_page_theme_button">Theme</string>
    <string name="new_alarm_page_save_button">Save</string>
    <string name="new_alarm_page_cancel_button">Cancel</string>
</resources>
