<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAlarm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/new_alarm_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <EditText
                android:id="@+id/editTextNewAlarmName"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/alarm_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNewAlarmDatePicker"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="openNewAlarmDatePicker"
                android:text="@string/new_alarm_page_date_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNewAlarmName" />

            <Button
                android:id="@+id/btnNewAlarmTimePicker"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="openNewAlarmTimePicker"
                android:text="@string/new_alarm_page_time_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnNewAlarmDatePicker" />

            <Button
                android:id="@+id/btnNewAlarmTone"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="openNewAlarmTonePicker"
                android:text="@string/new_alarm_page_tone_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnNewAlarmTimePicker" />

            <Button
                android:id="@+id/btnNewAlarmSnooze"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="openNewAlarmSnoozePicker"
                android:text="@string/new_alarm_page_snooze_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnNewAlarmTone" />

            <Button
                android:id="@+id/btnNewAlarmSave"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/new_alarm_page_save_button"
                tools:layout_editor_absoluteX="166dp"
                tools:layout_editor_absoluteY="465dp" />

            <Button
                android:id="@+id/btnNewAlarmCancel"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:onClick="cancelNewAlarm"
                android:text="@string/new_alarm_page_cancel_button"
                tools:layout_editor_absoluteX="222dp"
                tools:layout_editor_absoluteY="478dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>